--- a/draft-js-mention-plugin/src/mentionSuggestionsStyles.css
+++ b/draft-js-mention-plugin/src/mentionSuggestionsStyles.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   box-sizing: border-box;
   transform: scale(0);
-  max-height: 200px;
+  max-height: 400px;
   overflow-y: scroll;
+  width: 100%;
 }
